tests/snapshots/generator_tests__generate_abac_status_model.snap
---
source: tests/generator_tests.rs
assertion_line: 27
expression: outputs.model().trim()
---
model
  schema 1.1

type user

type nobody

type ownables
  relations
    define no_access: [nobody]
    define owner_id: [owner_grants_owner]
    define public_where_status_75289b56: [user:*]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: no_access
    define can_select_for_update: can_update
    define can_update: role_editor from owner_id and public_where_status_75289b56 and can_select
    define can_update_without_reading: role_editor from owner_id and public_where_status_75289b56

type owner_grants_owner
  relations
    define grant_admin: [user, team_members_team]
    define grant_editor: [user, team_members_team]
    define owner_team: [team_members_team]
    define owner_user: [user]
    define role_admin: owner_user or member from owner_team or grant_admin or member from grant_admin
    define role_editor: role_admin or grant_editor or member from grant_editor

type team_members_team
  relations
    define member: [user]
