tests/snapshots/generator_tests__generate_attribute_guard_tuples.snap
---
source: tests/generator_tests.rs
expression: "tuple_generator::format_tuples(&tuples)"
---
-- Attribute gate (status = 'published')
SELECT 'articles:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'public_viewer' AS relation, 'user:*' AS subject
FROM "articles"
WHERE "id" IS NOT NULL
AND "status" = 'published';
