tests/snapshots/generator_tests__generate_compound_or_model.snap
---
source: tests/generator_tests.rs
expression: model.dsl.trim()
---
model
  schema 1.1

type user

type documents
  relations
    define no_access: [user]
    define owner: [user]
    define public_viewer: [user:*]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: owner or public_viewer
    define can_update: no_access
