tests/snapshots/generator_tests__generate_connetto_capability_model.snap
---
source: tests/generator_tests.rs
assertion_line: 27
expression: outputs.model().trim()
---
model
  schema 1.1

type user

type nobody

type paper_shares
  relations
    define gate_shares_read_abbc62d2: [user:* with when_viewer_in_app_subjects_394712ea]
    define no_access: [nobody]
    define papers: [papers]
    define public_viewer: [user:*]
    define can_delete: public_viewer and can_select
    define can_insert: can_select from papers
    define can_insert_returning: can_select from papers and can_select
    define can_select: gate_shares_read_abbc62d2
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update
    define can_upsert: can_insert and can_update

type paper_shares_share
  relations
    define gate_papers_p_3b273139: [user:* with when_viewer_in_app_subjects_394712ea]

type papers
  relations
    define owner: [user]
    define paper_shares_share: [paper_shares_share]
    define can_delete: owner or gate_papers_p_3b273139 from paper_shares_share
    define can_insert: owner or gate_papers_p_3b273139 from paper_shares_share
    define can_select: owner or gate_papers_p_3b273139 from paper_shares_share
    define can_select_for_update: can_update
    define can_update: owner or gate_papers_p_3b273139 from paper_shares_share
    define can_update_without_reading: owner or gate_papers_p_3b273139 from paper_shares_share

condition when_viewer_in_app_subjects_394712ea(app_subjects: list<string>, viewer: string) {
  viewer in app_subjects
}
