tests/snapshots/generator_tests__generate_connetto_team_share_model.snap
---
source: tests/generator_tests.rs
assertion_line: 27
expression: outputs.model().trim()
---
model
  schema 1.1

type user

type items
  relations
    define no_access: [nobody]
    define owner: [user]
    define teams: [teams]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: owner or gate_items_p_d3ff2ba0 from teams
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update

type nobody

type team_members_share
  relations
    define gate_items_p_d3ff2ba0: [user:* with when_member_in_app_subjects_85f3f83a]

type teams
  relations
    define team_members_share: [team_members_share]
    define gate_items_p_d3ff2ba0: gate_items_p_d3ff2ba0 from team_members_share

condition when_member_in_app_subjects_85f3f83a(app_subjects: list<string>, member: string) {
  member in app_subjects
}
