tests/snapshots/generator_tests__generate_connetto_team_share_tuples.snap
---
source: tests/generator_tests.rs
assertion_line: 28
expression: "tuple_generator::format_tuples(outputs.tuple_queries())"
---
SET TIME ZONE 'UTC';
SET DateStyle = 'ISO, MDY';
SET bytea_output = 'hex';

-- User ownership (owner references users)
SELECT 'items:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner' AS relation, 'user:' || CASE WHEN "owner"::text ~ '^[A-Za-z0-9._@-]+$' THEN "owner"::text ELSE '~' || encode(convert_to("owner"::text, 'UTF8'), 'hex') END AS subject
FROM "public"."items"
WHERE "owner" IS NOT NULL
AND "id" IS NOT NULL
AND octet_length('user:' || CASE WHEN "owner"::text ~ '^[A-Za-z0-9._@-]+$' THEN "owner"::text ELSE '~' || encode(convert_to("owner"::text, 'UTF8'), 'hex') END) <= 512;

-- Caller-set share on team_members_share carrying team_members.member, evaluated by condition when_member_in_app_subjects_85f3f83a
SELECT 'team_members_share:' || CASE WHEN "team_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "team_id"::text ELSE '~' || encode(convert_to("team_id"::text, 'UTF8'), 'hex') END || '|' || CASE WHEN "member"::text ~ '^[A-Za-z0-9._@-]+$' THEN "member"::text ELSE '~' || encode(convert_to("member"::text, 'UTF8'), 'hex') END AS object, 'gate_items_p_d3ff2ba0' AS relation, 'user:*' AS subject,
  'when_member_in_app_subjects_85f3f83a' AS condition, jsonb_build_object('member', "member"::text) AS context
FROM "public"."team_members"
WHERE "team_id" IS NOT NULL AND "member" IS NOT NULL
AND length('team_members_share:' || CASE WHEN "team_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "team_id"::text ELSE '~' || encode(convert_to("team_id"::text, 'UTF8'), 'hex') END || '|' || CASE WHEN "member"::text ~ '^[A-Za-z0-9._@-]+$' THEN "member"::text ELSE '~' || encode(convert_to("member"::text, 'UTF8'), 'hex') END) <= 256;

-- items to teams bridge for tuple-to-userset
SELECT 'items:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'teams' AS relation, 'teams:' || CASE WHEN "team_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "team_id"::text ELSE '~' || encode(convert_to("team_id"::text, 'UTF8'), 'hex') END AS subject
FROM "public"."items"
WHERE "id" IS NOT NULL
AND "team_id" IS NOT NULL;

-- teams to team_members_share bridge for tuple-to-userset
SELECT 'teams:' || CASE WHEN "team_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "team_id"::text ELSE '~' || encode(convert_to("team_id"::text, 'UTF8'), 'hex') END AS object, 'team_members_share' AS relation, 'team_members_share:' || CASE WHEN "team_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "team_id"::text ELSE '~' || encode(convert_to("team_id"::text, 'UTF8'), 'hex') END || '|' || CASE WHEN "member"::text ~ '^[A-Za-z0-9._@-]+$' THEN "member"::text ELSE '~' || encode(convert_to("member"::text, 'UTF8'), 'hex') END AS subject
FROM "public"."team_members"
WHERE "team_id" IS NOT NULL
AND "member" IS NOT NULL
AND octet_length('team_members_share:' || CASE WHEN "team_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "team_id"::text ELSE '~' || encode(convert_to("team_id"::text, 'UTF8'), 'hex') END || '|' || CASE WHEN "member"::text ~ '^[A-Za-z0-9._@-]+$' THEN "member"::text ELSE '~' || encode(convert_to("member"::text, 'UTF8'), 'hex') END) <= 512;
