tests/snapshots/generator_tests__generate_constant_bool_model.snap
---
source: tests/generator_tests.rs
expression: model.dsl.trim()
---
model
  schema 1.1

type user

type docs
  relations
    define no_access: [user]
    define public_viewer: [user:*]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: public_viewer and no_access
    define can_select_for_update: can_update
    define can_update: no_access
