tests/snapshots/generator_tests__generate_constant_bool_tuples.snap
---
source: tests/generator_tests.rs
expression: "tuple_generator::format_tuples(&tuples)"
---
-- Constant TRUE policy (all rows are visible)
SELECT 'docs:' || id AS object, 'public_viewer' AS relation, 'user:*' AS subject
FROM docs
WHERE id IS NOT NULL;
